Corrected alignment

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
   width: 420px;
   background: purple;
   color: #fff;
+  border-radius: 10px;
+  padding: 30px 40px;
 }
 
 .wrapper h1 {
@@ -43,6 +45,7 @@ body {
   border-radius: 40px;
   font-size: 16px;
   color: #fff;
+  padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
@@ -55,4 +58,55 @@ body {
   top: 50%;
   transform: translateY(-50%);
   font-size: 20px;
+}
+
+.wrapper .remember-forgot {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14.5px;
+  margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+  accent-color: #fff;
+  margin-right: 3px;
+}
+
+.remember-forgot a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.remember-forgot a:hover {
+  text-decoration: underline;
+}
+
+.wrapper .btn {
+  width: 100%;
+  height: 45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 0px rgba(0, 0, 0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
+}
+
+.wrapper .register-link {
+  font-size: 14.5px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.register-link p a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.register-link p a:hover {
+  text-decoration: underline;
 }
